--- a/config/config.yaml
+++ b/config/config.yaml
@@ -68,7 +68,7 @@ feature_pos_file_path:
   path: /../data/correct_classification.csv
 
 pos_feature_file_path:
-  path: /../data/pos_feature_new.json
+  path: /../data/pos_feature.json
 neg_feature_file_path:
   path: /../data/neg_feature.json
 feature_file_path:
@@ -109,3 +109,8 @@ min_embedding_path:
   path: /../data/min_embedding.json
 sum_embedding_path:
   path: /../data/sum_embedding.json
+mean_embedding_path:
+  path: /../data/mean_embedding.json
+
+agg_embeddings_file_path:
+  path: /../data/embedding.json
